[package]
name = "radiate-rust"
version = "0.1.0"
edition = "2021"
authors = ["pkalivas <peterkalivas@gmail.com>"]
description = "A Rust library for genetic algorithms and artificial evolution."
repository = "https://github.com/pkalivas/radiate.rust"
readme = "../README.md"
categories = ["science", "simulation", "algorithms", "evolution", "genetic"]
keywords = ["search", "genetic", "learning", "artificial", "evolution"]
license = "MIT"

[dependencies]
rand = "0.8.5"